finished model A part

--- a/ipeds_report.Rmd
+++ b/ipeds_report.Rmd
@@ -173,7 +173,7 @@ Using this cleaned and narrowed data set, I fit two Binomial regression models w
 
 Using a Markov Chain Monte Carlo algorithm, I fit a multilevel binomial model with varying intercepts for state and for public/private status. A multilevel structure was appropriate because it would account for the expected correlation of retention rates between colleges within the same state or within the same public/private status. A binomial regression was appropriate because each institution’s retention rate reflects a group of individuals, each of whom were retained or not retained—thus, each institution’s retention rate can be viewed as a binomial random variable. The institutional characteristics previously mentioned were used as the model’s non-varying predictors. The prior for this model was only specified with respect to the residual variance and the covariance structure of the varying intercepts. For all of those parameters, I supplied a weakly informative Inverse Chi-Square prior with a scale parameter of 1 and 2 degrees of freedom, which can be expressed as an Inverse Gamma distribution with a shape parameter of 1 and a scale parameter of 1. ^[Gelman, A. (2006). Prior distributions for variance parameters in hierarchical models (comment on article by Browne and Draper). Bayesian Analysis, 1(3), 515–534. doi: 10.1214/06-ba117a] The model was fit with 40,000 iterations, with a burn-in period of 6,000 and a thinning factor of 30. These parameters yielded a roughly stationary trace plot and a roughly symmetric distribution plot for each of the fixed coefficients in the model, which suggested that the parameter estimates were trustworthy. The coefficient estimates and between-group variance estimates are as follows ^[full model outputs can be found in Appendix B]:
 
-``` {r echo = FALSE}
+``` {r}
 set.seed(60)
 prior_inf <- list(
   R = list(V = 1, nu = 2),
@@ -191,12 +191,29 @@ summary(ipeds_mcmc2)
 According to the model:  
 
 * A baseline institution that has no distance learning options, offers no credit for life experiences, offers no recreational or avocational opportunities, and has a typical student-faculty ratio of about 15 is expected to have a log odds retention rate ratio ^[The log odds retention rate ratio is the natural logarithm of the ratio between retention rate and its complement.] of `r summary(ipeds_mcmc2$Sol)$statistics[1, 1] %>% round(3)`, meaning that the estimated retention rate of such an institution would be 
-$logit^{-1}($ `r {summary(ipeds_mcmc2$Sol)$statistics[1, 1] %>% round(3)}` $)$ = `r (invlogit(summary(ipeds_mcmc2$Sol)$statistics[1, 1])) %>% round(3)`.
+$logit^{-1}$ (`r {summary(ipeds_mcmc2$Sol)$statistics[1, 1] %>% round(3)}`) = `r (invlogit(summary(ipeds_mcmc2$Sol)$statistics[1, 1])) %>% round(3)`.
 * An institution that offers distance learning options is expected to have a log odds retention rate ratio that is `r summary(ipeds_mcmc2$Sol)$statistics[2, 1] %>% round(3) %>% abs` less than that of an institution that does not offer distance learning options, given that credit for life experiences, recreational offerings, and student faculty ratio are held constant. While the corresponding change in retention rate itself can vary depending on the original retention rate, an estimated upper bound on the corresponding change in retention rate is `r summary(ipeds_mcmc2$Sol)$statistics[2, 1] %>% round(3)` / 4 = `r ((summary(ipeds_mcmc2$Sol)$statistics[2, 1] %>% round(3)) / 4) %>% round(3)`.
 * An institution that offers credit for life experiences is expected to have a log odds retention rate ratio that is `r summary(ipeds_mcmc2$Sol)$statistics[3, 1] %>% round(3) %>% abs` less than that of an institution that does not offer credit for life experiences, given that distance learning offerings, recreational offerings, and student faculty ratio are held constant. While the corresponding change in retention rate itself can vary depending on the original retention rate, an estimated upper bound on the corresponding change in retention rate is `r summary(ipeds_mcmc2$Sol)$statistics[3, 1] %>% round(3)` / 4 = `r ((summary(ipeds_mcmc2$Sol)$statistics[3, 1] %>% round(3)) / 4) %>% round(3)`.
 * An institution that offers recreational or avocational opportunities is expected to have a log odds retention rate ratio that is `r summary(ipeds_mcmc2$Sol)$statistics[4, 1] %>% round(3) %>% abs` less than that of an institution that does not offer recreational or avocational opportunities, given that distance learning offerings, credit for life experiences, and student faculty ratio are held constant. While the corresponding change in retention rate itself can vary depending on the original retention rate, an estimated upper bound on the corresponding change in retention rate is `r summary(ipeds_mcmc2$Sol)$statistics[4, 1] %>% round(3)` / 4 = `r ((summary(ipeds_mcmc2$Sol)$statistics[4, 1] %>% round(3)) / 4) %>% round(3)`.
 * A unit increase in student-faculty ratio is generally associated with a decrease of `r summary(ipeds_mcmc2$Sol)$statistics[5, 1] %>% round(3) %>% abs` in the log odds ratio of retention rate, given that distance learning offerings, credit for life experiences, and recreational offerings are held constant. While the corresponding change in retention rate itself can vary depending on the original retention rate, an estimated upper bound on the corresponding change in retention rate is `r summary(ipeds_mcmc2$Sol)$statistics[5, 1] %>% round(3)` / 4 = `r ((summary(ipeds_mcmc2$Sol)$statistics[5, 1] %>% round(3)) / 4) %>% round(3)`.
 
+The estimate for the variance between states’ baseline retention rates, `r summary(ipeds_mcmc2)$Gcovariances[1,1] %>% round(3)`, was small compared to the estimate for the variance between public/private statuses’ baseline retention rates, `r summary(ipeds_mcmc2)$Gcovariances[2,1] %>% round(3)`. This discrepancy suggested that the state grouping may not provide much additional information about the baseline retention rate after the overall baseline retention rate is already considered. However, there seems to be much more variation in retention rates between public, private not-for-profit, and private for-profit institutions.  
+
+The estimated varying intercepts for public, private not-for-profit, and private for-profit were as follows:
+
+``` {r echo = FALSE}
+summary(ipeds_mcmc2$Sol)$statistics[64:66,1]
+```
+
+According to the model, a baseline institution that has no distance learning options, offers no credit for life experiences, offers no recreational or avocational opportunities, and has a typical student-faculty ratio is expected to have a retention rate of:  
+
+* $logit^{-1}$ (`r {summary(ipeds_mcmc2$Sol)$statistics[1, 1] %>% round(3)}` - `r summary(ipeds_mcmc2$Sol)$statistics[64,1] %>% abs %>% round(3)`) = `r invlogit(summary(ipeds_mcmc2$Sol)$statistics[1, 1] + summary(ipeds_mcmc2$Sol)$statistics[64,1] ) %>% round(3)` if it is private for-profit
+* $logit^{-1}$ (`r {summary(ipeds_mcmc2$Sol)$statistics[1, 1] %>% round(3)}` + `r summary(ipeds_mcmc2$Sol)$statistics[65,1] %>% abs %>% round(3)`) = `r invlogit(summary(ipeds_mcmc2$Sol)$statistics[1, 1] + summary(ipeds_mcmc2$Sol)$statistics[65,1] ) %>% round(3)` if it is private not-for-profit
+* $logit^{-1}$ (`r {summary(ipeds_mcmc2$Sol)$statistics[1, 1] %>% round(3)}` - `r summary(ipeds_mcmc2$Sol)$statistics[66,1] %>% abs %>% round(3)`) = `r invlogit(summary(ipeds_mcmc2$Sol)$statistics[1, 1] + summary(ipeds_mcmc2$Sol)$statistics[66,1] ) %>% round(3)` if it is public
+
+The variation in estimated baseline retention rate between the different public/private statuses remind us that the type of institution alone may be associated with factors that influence a student’s likelihood to stay in school, regardless of efforts made by the institution to prevent attrition. However, we must note that the standard deviation of these estimates all suggest 95% credible intervals that contain 0, so there is a great degree of uncertainty of these varying intercepts. 
+
+## Model B: Multilevel model with varying intercepts per state and public/private status, and varying slope for recreational experiences per public/private status
 
 
 
